--- a/multicompDM/MulticomponentDMNotebook.ipynb
+++ b/multicompDM/MulticomponentDMNotebook.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No module named 'colossus': Mass function cells won't work\n",
+      "No module named 'camb'\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -768,6 +777,7 @@
     "Next, we want to generate the same plot for Warm Dark Matter. \n",
     "\n",
     "Jeff thinks this would be implemented with \"free streaming length\" or \"k_cutoff\".\n",
+    "\"Free streaming scale\" contained in the [halofit.f90](https://github.com/cmbant/CAMB/blob/c9e9bb0a5842a9ba48797d4f773d4d2cf555d 74f/fortran/halofit.f90#L1016) file.\n",
     "\n",
     "It seems that this is handled by the [NonLinear model](https://github.com/cmbant/CAMB/blob/e9c8275f4da3c1c413f1d346d0e7edb599325248/camb/model.py)."
    ]
@@ -805,7 +815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
