--- a/multicompDM/MulticomponentDMNotebook.ipynb
+++ b/multicompDM/MulticomponentDMNotebook.ipynb
@@ -777,7 +777,7 @@
     "Next, we want to generate the same plot for Warm Dark Matter. \n",
     "\n",
     "Jeff thinks this would be implemented with \"free streaming length\" or \"k_cutoff\".\n",
-    "\"Free streaming scale\" contained in the [halofit.f90](https://github.com/cmbant/CAMB/blob/c9e9bb0a5842a9ba48797d4f773d4d2cf555d 74f/fortran/halofit.f90#L1016) file.\n",
+    "\"Free streaming scale\" contained in the [halofit.f90](https://github.com/cmbant/CAMB/blob/c9e9bb0a5842a9ba48797d4f773d4d2cf555d74f/fortran/halofit.f90#L1016) file.\n",
     "\n",
     "It seems that this is handled by the [NonLinear model](https://github.com/cmbant/CAMB/blob/e9c8275f4da3c1c413f1d346d0e7edb599325248/camb/model.py)."
    ]
