Archived the old method

--- a/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "d843c60b",
+   "id": "eb139371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a623d2",
+   "id": "f41a6936",
    "metadata": {},
    "source": [
     "- [The Catalog site](https://heasarc.gsfc.nasa.gov/db-perl/W3Browse/w3table.pl?tablehead=name%3Dfermilgrb&Action=More+Options)\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "32dd6b9a",
+   "id": "8b7ae5ac",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "31bbecec",
+   "id": "5e98eec0",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f902fa05",
+   "id": "bd2a4648",
    "metadata": {},
    "source": [
     "There should be a negative correlation between burst duration and corresponding flux ratio (0927-6505(96)00018-7, Figure 2.)\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "4be0d5bb",
+   "id": "6898cfae",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "5ffbdd68",
+   "id": "40debaed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,16 +163,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f5ba93",
+   "id": "24a3e35f",
    "metadata": {},
    "source": [
-    "-------"
+    "-------\n",
+    "### Ignore below here!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "535166f7",
+   "id": "e9213304",
    "metadata": {
     "scrolled": true
    },
@@ -209,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "4a098df9",
+   "id": "17ba0530",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "25a2c56a",
+   "id": "14f0c901",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "20ece882",
+   "id": "435c170e",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb7994e",
+   "id": "b8074d22",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -424,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ad74d6",
+   "id": "f2d0fc3d",
    "metadata": {},
    "outputs": [],
    "source": []
