Recreate candidate list with a few new ones

--- a/BHRad/BHevaporation.ipynb
+++ b/BHRad/BHevaporation.ipynb
@@ -5759,18 +5759,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1b3a82",
+   "id": "812cf02a",
    "metadata": {},
    "source": [
     "Miscellaneous possible candidates\n",
     "\n",
-    "- 180305393 (Weirdly high error)"
+    "- 180305393 (Weirdly high error)\n",
+    "\n",
+    "- 131216081\n",
+    "- 121225417\n",
+    "- 150416773\n",
+    "- 160101215"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1da4cd85",
+   "id": "24f2712a",
    "metadata": {},
    "outputs": [],
    "source": [
