high hardness exploration

--- a/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
@@ -735,8 +735,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 370,
    "id": "161eb3dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166         inf\n",
+      "159         inf\n",
+      "145         inf\n",
+      "168         inf\n",
+      "177         inf\n",
+      "49          inf\n",
+      "51          inf\n",
+      "33          inf\n",
+      "65     8.433630\n",
+      "144    6.426991\n",
+      "77     6.069751\n",
+      "163    3.904246\n",
+      "167    3.566120\n",
+      "151    3.308973\n",
+      "34     2.627453\n",
+      "162    2.604736\n",
+      "183    2.306479\n",
+      "142    2.289091\n",
+      "184    2.113133\n",
+      "156    1.982881\n",
+      "Name: fluence_ratio, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "name                       b'GRB100826957    '\n",
+       "gcn_name                   b'GRB100826A      '\n",
+       "time                              55434.957199\n",
+       "trigger_met                        304556304.9\n",
+       "ra                                      277.71\n",
+       "                                  ...         \n",
+       "fluence_ratio                          8.43363\n",
+       "flux_ratio_error                      0.302652\n",
+       "flux_ene_ratio_error                  3.020028\n",
+       "fluence_ratio_error                  12.246271\n",
+       "gbm-lat_time_difference                -24.806\n",
+       "Name: 65, Length: 114, dtype: object"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Do we want the ones with the highest hardness value?\n",
+    "print(targets['fluence_ratio'].sort_values(ascending=False).head(20))\n",
+    "targets.iloc[65]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccc3699a",
    "metadata": {},
    "outputs": [],
    "source": []
