a little more exploration

--- a/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "2efa7970",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "Text(0.5, 0.065, 'In Gal. Lat/Long coords, the galactic center is at (0,0) and the plane is on the x-axis.')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -890,9 +890,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64bc1cc6",
+   "metadata": {},
+   "source": [
+    "Let's try to enforce the same restrictions that Cline did on their BATSE data.\n",
+    "\n",
+    "- Hardness >0\n",
+    "- Burst Duration <1s\n",
+    "\n",
+    "We probably need to lift the redshift requirement we imposed at the database-level. Most of the t<1s events are 0, which is incorrect on closer inspection. Also, need to figure out a way to determine the actual burst duration in the way that Cline did."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "2be98bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2      0.203\n",
+       "5      0.000\n",
+       "6      0.000\n",
+       "8      0.000\n",
+       "10     0.000\n",
+       "       ...  \n",
+       "173    0.649\n",
+       "176    0.000\n",
+       "178    0.000\n",
+       "181    0.410\n",
+       "184    0.000\n",
+       "Name: lle_t90, Length: 61, dtype: float64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed = targets[ targets['fluence_ratio']>0 ].copy()\n",
+    "parsed = parsed[ targets['lle_t90']<1 ]\n",
+    "parsed['lle_t90']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd4bc45",
+   "id": "0529538b",
    "metadata": {},
    "outputs": [],
    "source": []
