Parsed gbm and lle t90 with <2s

--- a/BHRad/Modelling&Fitting.ipynb
+++ b/BHRad/Modelling&Fitting.ipynb
@@ -8,8 +8,7 @@
     "## <a id=\"Top\" style=\"color:black;\">Top</a>\n",
     "- [Plotting BH evaporation](#BHevap)\n",
     "- [Fitting the Lightcurves of GRB candidates](#lightcurves)\n",
-    "- [Expanding to other sources](#candidates)\n",
-    "- [Fitting GRB spectrum to spectral model](#fitting)"
+    "- [Expanding to other sources](#candidates)"
    ]
   },
   {
@@ -5670,7 +5669,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "05a892af",
+   "id": "e79b5ce5",
    "metadata": {},
    "outputs": [
     {
@@ -5694,7 +5693,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "381969db",
+   "id": "77a353bd",
    "metadata": {
     "scrolled": false
    },
