--- a/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "8085859d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import numpy as np\n",
     "from astropy.table import Table\n",
     "import warnings\n",
@@ -35,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "d7e643c9",
+   "execution_count": 55,
+   "id": "4175a87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
     "    # Remove trailing whitespace\n",
     "    targets = targets.rename(columns=lambda x: x.strip().lower())\n",
     "    # Cleans GRB names\n",
-    "    targets['name'] = targets['name'].str.decode(\"utf-8\").replace('\\'','').replace(' ','')[1:]\n",
+    "    targets['name'] = targets['name'].str.decode(\"utf-8\").replace('\\'','').replace(r\"^ +| +$\", r\"\", regex=True)[1:]\n",
     "    return targets\n",
     "\n",
     "def propagate_error(a, b, e_a, e_b):\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64e5c44",
+   "id": "50f45475",
    "metadata": {},
    "source": [
     "# Starting with just RS=null datset\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 56,
    "id": "8131503a",
    "metadata": {},
    "outputs": [
@@ -212,7 +213,7 @@
        "freq                             7.0                     11.0  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 57,
    "id": "7b305145",
    "metadata": {},
    "outputs": [
@@ -437,7 +438,7 @@
        "gbm_cat_t90                   0.786650          -0.247354     1.000000  "
       ]
      },
-     "execution_count": 181,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 58,
    "id": "f0b0157d",
    "metadata": {},
    "outputs": [
@@ -470,7 +471,7 @@
        "(-0.75, 8.0)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 59,
    "id": "7eaa7ad1",
    "metadata": {
     "scrolled": true
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 60,
    "id": "f5292672",
    "metadata": {},
    "outputs": [
@@ -561,7 +562,7 @@
        "Text(0.5, 0.01, 'Fluence ratio ~= hardness wrt. GBM and LAT -- GBM (10 keV - 25 MeV) / LAT (20 MeV - 300 MeV)')"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 61,
    "id": "922a0705",
    "metadata": {},
    "outputs": [],
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 62,
    "id": "2efa7970",
    "metadata": {
     "scrolled": false
@@ -698,8 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "77097639",
+   "execution_count": 63,
+   "id": "1a24ca36",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +814,7 @@
        "freq                             8.0                     13.0  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 64,
    "id": "161eb3dc",
    "metadata": {},
    "outputs": [
@@ -844,73 +845,73 @@
      "output_type": "stream",
      "text": [
       "Sorted by hardness: \n",
-      "     fluence_ratio              name       ra     dec  lle_t90  gbm_cat_t90\n",
-      "76        8.433630  GRB100826957      277.710 -25.270   21.087       84.993\n",
-      "174       6.426991  GRB180305393       49.670  32.100    2.894       13.056\n",
-      "90        6.069751  GRB130310840      142.380 -17.100    0.078       16.000\n",
-      "194       4.541625  GRB200613229      153.018  45.886    3.426      478.026\n",
-      "202       3.904246  GRB170306588      154.540  51.550    0.000       18.944\n",
-      "206       3.566120  GRB171102107      187.720  54.010    0.000       48.385\n",
-      "71        3.505726  GRB190114873       54.650 -27.040   41.297      116.354\n",
-      "184       3.308973  GRB160910722      221.310  38.810   10.777       24.320\n",
-      "41        2.627453  GRB170906030      203.940 -47.120    0.000       78.849\n",
-      "199       2.604736  GRB120226871      302.970  48.980   28.926       52.993\n",
-      "225       2.306479  GRB100724029      123.590  75.860   99.807      114.690\n",
-      "171       2.289091  GRB161015710      269.130  30.160    0.000       15.104\n",
-      "228       2.113133  GRB141113346      182.320  77.380    0.000        0.448\n",
-      "190       1.982881  GRB111210359      122.510  44.090    0.000       60.000\n",
-      "198       1.894373  GRB190122305      258.710  48.120   12.911       54.016\n",
-      "91        1.811143  GRB101227406      240.210 -15.930    0.000      153.347\n",
-      "172       1.800486  GRB081102365      212.950  30.330    0.000        1.728\n",
-      "84        1.775366  GRB091120191      226.700 -21.360    0.000       50.177\n",
-      "142       1.714336  GRB100423244      120.180  13.360    0.000       16.512\n",
-      "61        1.699966  GRB131209547      137.060 -33.900    0.000       13.568\n",
+      "     fluence_ratio          name       ra     dec  lle_t90  gbm_cat_t90\n",
+      "76        8.433630  GRB100826957  277.710 -25.270   21.087       84.993\n",
+      "174       6.426991  GRB180305393   49.670  32.100    2.894       13.056\n",
+      "90        6.069751  GRB130310840  142.380 -17.100    0.078       16.000\n",
+      "194       4.541625  GRB200613229  153.018  45.886    3.426      478.026\n",
+      "202       3.904246  GRB170306588  154.540  51.550    0.000       18.944\n",
+      "206       3.566120  GRB171102107  187.720  54.010    0.000       48.385\n",
+      "71        3.505726  GRB190114873   54.650 -27.040   41.297      116.354\n",
+      "184       3.308973  GRB160910722  221.310  38.810   10.777       24.320\n",
+      "41        2.627453  GRB170906030  203.940 -47.120    0.000       78.849\n",
+      "199       2.604736  GRB120226871  302.970  48.980   28.926       52.993\n",
+      "225       2.306479  GRB100724029  123.590  75.860   99.807      114.690\n",
+      "171       2.289091  GRB161015710  269.130  30.160    0.000       15.104\n",
+      "228       2.113133  GRB141113346  182.320  77.380    0.000        0.448\n",
+      "190       1.982881  GRB111210359  122.510  44.090    0.000       60.000\n",
+      "198       1.894373  GRB190122305  258.710  48.120   12.911       54.016\n",
+      "91        1.811143  GRB101227406  240.210 -15.930    0.000      153.347\n",
+      "172       1.800486  GRB081102365  212.950  30.330    0.000        1.728\n",
+      "84        1.775366  GRB091120191  226.700 -21.360    0.000       50.177\n",
+      "142       1.714336  GRB100423244  120.180  13.360    0.000       16.512\n",
+      "61        1.699966  GRB131209547  137.060 -33.900    0.000       13.568\n",
       "\n",
       "Sorted by LLE burst duration:\n",
-      "     lle_t90              name       ra     dec  fluence_ratio  gbm_cat_t90\n",
-      "55     0.071  GRB090531775      252.060 -36.050            NaN        0.768\n",
-      "90     0.078  GRB130310840      142.380 -17.100       6.069751       16.000\n",
-      "219    0.093  GRB110529034      118.330  67.910            inf        0.512\n",
-      "118    0.101  GRB190606080       76.540  -0.680       0.000000        0.224\n",
-      "216    0.200  GRB150314205      126.120  63.790       0.000000       10.688\n",
-      "2      0.203  GRB160325291       16.210 -72.660       0.345712       42.945\n",
-      "21     0.213  GRB200219317      342.880 -60.200            NaN        1.152\n",
-      "97     0.231  GRB110120666       61.620 -12.020       0.513683       26.173\n",
-      "57     0.275  GRB131216081       91.590 -35.500            inf       19.262\n",
-      "29     0.398  GRB120316008       57.350 -56.410       0.421541       26.624\n",
-      "223    0.410  GRB170728961      237.430  70.850       0.204717       46.336\n",
-      "39     0.423  GRB150820880      258.650 -48.330            inf        5.888\n",
-      "195    0.443  GRB160917479      295.668  46.403            inf       19.456\n",
-      "37     0.460  GRB120709883      318.800 -50.420       0.393268       27.328\n",
-      "213    0.649  GRB220210998      348.140  61.060       1.344976       43.520\n",
-      "62     0.889  GRB090626189      170.190 -33.560       0.261387       48.897\n",
-      "74     0.935  GRB110921912        5.770 -26.590       0.338194       17.664\n",
-      "100    1.124  GRB140619475      132.660  -9.650       0.746514        2.816\n",
-      "175    1.144  GRB090227772       11.800  32.200            inf        0.304\n",
-      "110    1.203  GRB080825593      234.830  -3.840       0.378119       20.992\n",
+      "     lle_t90          name       ra     dec  fluence_ratio  gbm_cat_t90\n",
+      "55     0.071  GRB090531775  252.060 -36.050            NaN        0.768\n",
+      "90     0.078  GRB130310840  142.380 -17.100       6.069751       16.000\n",
+      "219    0.093  GRB110529034  118.330  67.910            inf        0.512\n",
+      "118    0.101  GRB190606080   76.540  -0.680       0.000000        0.224\n",
+      "216    0.200  GRB150314205  126.120  63.790       0.000000       10.688\n",
+      "2      0.203  GRB160325291   16.210 -72.660       0.345712       42.945\n",
+      "21     0.213  GRB200219317  342.880 -60.200            NaN        1.152\n",
+      "97     0.231  GRB110120666   61.620 -12.020       0.513683       26.173\n",
+      "57     0.275  GRB131216081   91.590 -35.500            inf       19.262\n",
+      "29     0.398  GRB120316008   57.350 -56.410       0.421541       26.624\n",
+      "223    0.410  GRB170728961  237.430  70.850       0.204717       46.336\n",
+      "39     0.423  GRB150820880  258.650 -48.330            inf        5.888\n",
+      "195    0.443  GRB160917479  295.668  46.403            inf       19.456\n",
+      "37     0.460  GRB120709883  318.800 -50.420       0.393268       27.328\n",
+      "213    0.649  GRB220210998  348.140  61.060       1.344976       43.520\n",
+      "62     0.889  GRB090626189  170.190 -33.560       0.261387       48.897\n",
+      "74     0.935  GRB110921912    5.770 -26.590       0.338194       17.664\n",
+      "100    1.124  GRB140619475  132.660  -9.650       0.746514        2.816\n",
+      "175    1.144  GRB090227772   11.800  32.200            inf        0.304\n",
+      "110    1.203  GRB080825593  234.830  -3.840       0.378119       20.992\n",
       "\n",
       "Sorted by GBM burst duration:\n",
-      "     gbm_cat_t90              name      ra    dec  fluence_ratio  lle_t90\n",
-      "15         0.128  GRB170127067      338.98 -63.97       0.000000    0.000\n",
-      "78         0.144  GRB200415367       11.08 -25.00       0.000000    0.000\n",
-      "137        0.200  GRB160702516      231.09   9.07       0.000000    0.000\n",
-      "118        0.224  GRB190606080       76.54  -0.68       0.000000    0.101\n",
-      "175        0.304  GRB090227772       11.80  32.20            inf    1.144\n",
-      "131        0.320  GRB140402007      207.66   5.97       0.103421    1.546\n",
-      "67         0.448  GRB090228204       98.60 -28.79       0.973888    0.000\n",
-      "228        0.448  GRB141113346      182.32  77.38       2.113133    0.000\n",
-      "140        0.480  GRB171011810      168.48  10.03       0.281154    0.000\n",
-      "27         0.512  GRB160829334      201.72 -56.78       0.000000    0.000\n",
-      "219        0.512  GRB110529034      118.33  67.91            inf    0.093\n",
-      "208        0.576  GRB120915000      240.95  57.04       0.126068    0.000\n",
-      "155        0.640  GRB081024891      323.01  20.84       0.521911    1.320\n",
-      "128        0.704  GRB110728056      173.57   4.34       0.594855    0.000\n",
-      "55         0.768  GRB090531775      252.06 -36.05            NaN    0.071\n",
-      "66         0.896  GRB120830297       88.59 -28.79       0.350574    0.000\n",
-      "73         0.960  GRB090510016      333.57 -26.62       0.479485    5.396\n",
-      "21         1.152  GRB200219317      342.88 -60.20            NaN    0.213\n",
-      "168        1.264  GRB190515190      137.75  28.93       0.687290    1.645\n",
-      "65         1.536  GRB180703949       96.92 -29.88       0.000000    0.000\n"
+      "     gbm_cat_t90          name      ra    dec  fluence_ratio  lle_t90\n",
+      "15         0.128  GRB170127067  338.98 -63.97       0.000000    0.000\n",
+      "78         0.144  GRB200415367   11.08 -25.00       0.000000    0.000\n",
+      "137        0.200  GRB160702516  231.09   9.07       0.000000    0.000\n",
+      "118        0.224  GRB190606080   76.54  -0.68       0.000000    0.101\n",
+      "175        0.304  GRB090227772   11.80  32.20            inf    1.144\n",
+      "131        0.320  GRB140402007  207.66   5.97       0.103421    1.546\n",
+      "67         0.448  GRB090228204   98.60 -28.79       0.973888    0.000\n",
+      "228        0.448  GRB141113346  182.32  77.38       2.113133    0.000\n",
+      "140        0.480  GRB171011810  168.48  10.03       0.281154    0.000\n",
+      "27         0.512  GRB160829334  201.72 -56.78       0.000000    0.000\n",
+      "219        0.512  GRB110529034  118.33  67.91            inf    0.093\n",
+      "208        0.576  GRB120915000  240.95  57.04       0.126068    0.000\n",
+      "155        0.640  GRB081024891  323.01  20.84       0.521911    1.320\n",
+      "128        0.704  GRB110728056  173.57   4.34       0.594855    0.000\n",
+      "55         0.768  GRB090531775  252.06 -36.05            NaN    0.071\n",
+      "66         0.896  GRB120830297   88.59 -28.79       0.350574    0.000\n",
+      "73         0.960  GRB090510016  333.57 -26.62       0.479485    5.396\n",
+      "21         1.152  GRB200219317  342.88 -60.20            NaN    0.213\n",
+      "168        1.264  GRB190515190  137.75  28.93       0.687290    1.645\n",
+      "65         1.536  GRB180703949   96.92 -29.88       0.000000    0.000\n"
      ]
     }
    ],
@@ -934,8 +935,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "d1fa8095",
+   "execution_count": 65,
+   "id": "3b2987a5",
    "metadata": {},
    "outputs": [
     {
@@ -978,8 +979,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "5863ed89",
+   "execution_count": 66,
+   "id": "f1f54552",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 67,
    "id": "5475a6ae",
    "metadata": {},
    "outputs": [
@@ -1014,8 +1015,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "ed4078bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            name     ra    dec  lle_t90  gbm_cat_t90  fluence_ratio  \\\n",
+      "25  GRB141222298  178.0 -57.31    1.293        2.752            0.0   \n",
+      "\n",
+      "    like_gbm_ts  \n",
+      "25          0.0  \n",
+      "             name    ra   dec  lle_t90  gbm_cat_t90  fluence_ratio  \\\n",
+      "175  GRB090227772  11.8  32.2    1.144        0.304            inf   \n",
+      "\n",
+      "     like_gbm_ts  \n",
+      "175      23.1253  \n",
+      "             name      ra    dec  lle_t90  gbm_cat_t90  fluence_ratio  \\\n",
+      "219  GRB110529034  118.33  67.91    0.093        0.512            inf   \n",
+      "\n",
+      "     like_gbm_ts  \n",
+      "219      9.55798  \n",
+      "            name      ra    dec  lle_t90  gbm_cat_t90  fluence_ratio  \\\n",
+      "85  GRB131014215  100.78 -20.76    1.811          3.2       0.816955   \n",
+      "\n",
+      "    like_gbm_ts  \n",
+      "85      131.946  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# The ones with decent signal\n",
+    "cols = ['name', 'ra', 'dec', 'lle_t90', 'gbm_cat_t90', 'fluence_ratio', 'like_gbm_ts']\n",
+    "\n",
+    "print( targets[cols].loc[ targets['name'] == 'GRB141222298'] )\n",
+    "print( targets[cols].loc[ targets['name'] == 'GRB090227772'] ) \n",
+    "print( targets[cols].loc[ targets['name'] == 'GRB110529034'] )\n",
+    "print( targets[cols].loc[ targets['name'] == 'GRB131014215'] )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8f6d9a80",
+   "id": "5e1f4dda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd5ec17c",
    "metadata": {},
    "outputs": [],
    "source": []
