read a lot today

--- a/BHRad/Modelling.ipynb
+++ b/BHRad/Modelling.ipynb
@@ -91,7 +91,12 @@
     "Paper: [BH evaporation models](https://arxiv.org/pdf/1510.04372.pdf)\n",
     "- 3.3: Photon spectrum\n",
     "- 3.4: Time-integrated photon spectrum\n",
-    "- 3.5: Light curve"
+    "- 3.5: Light curve\n",
+    "\n",
+    "[LAT and GBM detector energy ranges](https://hesperia.gsfc.nasa.gov/fermi_solar/summary_gbm_lat.htm):\n",
+    "LAT: 20 MeV to 300 GeV\n",
+    "Twelve GBM NaI: 8 keV to 1 MeV\n",
+    "Two GBM BGO: 200 keV to 40 MeV"
    ]
   },
   {
