--- a/BHRad/OrderOfMagEstimations.ipynb
+++ b/BHRad/OrderOfMagEstimations.ipynb
@@ -345,13 +345,15 @@
     }
    ],
    "source": [
-    "M = np.linspace(10**7, 10**10) * u.kg\n",
+    "M = np.linspace(10**10, 10**12) * u.kg\n",
     "\n",
     "F_d = 1/func_M(M).to('1 / (cm g)')\n",
+    "plt.plot([5*1e11,5*1e11],[min(F_d), max(F_d)], label=r'5\\times 10^{14}g')\n",
     "\n",
-    "plt.loglog(M, F_d)\n",
+    "plt.loglog(M, F_d, label='Distance maximum')\n",
     "plt.xlabel('Mass kg')\n",
     "plt.ylabel('Distance %s'%F_d.unit)\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
