Tried fitting with threeML, this archives that attempt

--- a/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
+++ b/BHRad/GBM_Catalog_Searching/Exploring_possible_candidates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8085859d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "39913528",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,8 @@
     "    targets = targets.rename(columns=lambda x: x.strip().lower())\n",
     "    # Cleans GRB names\n",
     "    targets['name'] = targets['name'].str.decode(\"utf-8\").replace('\\'','').replace(r\"^ +| +$\", r\"\", regex=True)[1:]\n",
+    "    targets['gcn_name'] = targets['gcn_name'].str.decode(\"utf-8\").replace('\\'','').replace(r\"^ +| +$\", r\"\", regex=True)[1:]\n",
+    "\n",
     "    return targets\n",
     "\n",
     "def propagate_error(a, b, e_a, e_b):\n",
@@ -745,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "7fc4a0aa",
    "metadata": {},
    "outputs": [
@@ -860,7 +862,7 @@
        "freq                       3.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2450,15 +2452,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "id": "643b848c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ra</th>\n",
+       "      <th>dec</th>\n",
+       "      <th>lle_t90</th>\n",
+       "      <th>gbm_cat_t90</th>\n",
+       "      <th>hardness</th>\n",
+       "      <th>gbm-lle_t90_difference</th>\n",
+       "      <th>like_gbm-lat_time_difference</th>\n",
+       "      <th>like_gbm_ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>GRB160314929</td>\n",
+       "      <td>167.78</td>\n",
+       "      <td>45.71</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>98.562</td>\n",
+       "      <td>2.222506</td>\n",
+       "      <td>98.562</td>\n",
+       "      <td>-137.26</td>\n",
+       "      <td>-3.544820e-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>GRB210410037</td>\n",
+       "      <td>269.47</td>\n",
+       "      <td>45.71</td>\n",
+       "      <td>6.207</td>\n",
+       "      <td>48.128</td>\n",
+       "      <td>1.420576</td>\n",
+       "      <td>41.921</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>2.861180e+02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name      ra    dec  lle_t90  gbm_cat_t90  hardness  \\\n",
+       "192  GRB160314929  167.78  45.71    0.000       98.562  2.222506   \n",
+       "193  GRB210410037  269.47  45.71    6.207       48.128  1.420576   \n",
+       "\n",
+       "     gbm-lle_t90_difference  like_gbm-lat_time_difference   like_gbm_ts  \n",
+       "192                  98.562                       -137.26 -3.544820e-08  \n",
+       "193                  41.921                         -0.13  2.861180e+02  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "cols = ['name', 'ra', 'dec', 'lle_t90', 'gbm_cat_t90', 'hardness', 'gbm-lle_t90_difference', 'like_gbm-lat_time_difference', 'like_gbm_ts']\n",
+    "\n",
     "#print(all_candidates['ra'].value_counts())\n",
     "#print(all_candidates['dec'].value_counts())\n",
     "\n",
     "#all_candidates[cols].loc[all_candidates['dec'] == -28.79]\n",
+    "all_candidates[cols].loc[all_candidates['dec'] == 45.710]\n",
     "\n",
     "# Nope!"
    ]
@@ -2477,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "c12c2ce2",
    "metadata": {},
    "outputs": [],
@@ -2493,8 +2574,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0de2fa93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     GRB141222298\n",
+       "16    GRB131014215\n",
+       "18    GRB140619475\n",
+       "21    GRB140102887\n",
+       "24    GRB140402007\n",
+       "30    GRB081024891\n",
+       "31    GRB190515190\n",
+       "Name: name, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select.query('(gbm_cat_t90 > 0.2 and gbm_cat_t90 < 5) and (lle_t90 > 0.2 and lle_t90 < 5)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0661a4be",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "bc2933e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>gcn_name</th>\n",
+       "      <th>time</th>\n",
+       "      <th>trigger_met</th>\n",
+       "      <th>ra</th>\n",
+       "      <th>dec</th>\n",
+       "      <th>lii</th>\n",
+       "      <th>bii</th>\n",
+       "      <th>error_radius</th>\n",
+       "      <th>redshift</th>\n",
+       "      <th>...</th>\n",
+       "      <th>flux_ratio</th>\n",
+       "      <th>flux_ene_ratio</th>\n",
+       "      <th>fluence_ratio</th>\n",
+       "      <th>hardness</th>\n",
+       "      <th>flux_ratio_error</th>\n",
+       "      <th>flux_ene_ratio_error</th>\n",
+       "      <th>fluence_ratio_error</th>\n",
+       "      <th>hardness_error</th>\n",
+       "      <th>like_gbm-lat_time_difference</th>\n",
+       "      <th>gbm-lle_t90_difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 117 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, gcn_name, time, trigger_met, ra, dec, lii, bii, error_radius, redshift, luminosity_distance, theta, zenith, arr_flag, distance_to_closest, irfs, lle_bbbd_sig, lle_bbbd_sig_detected, lle_t05, lle_t90, lle_t95, tl0, tl100, tl100_error, tl1, tl0_lower, tl1_upper, like_best_t0, like_best_t1, like_best_ts, like_best_flux, like_best_flux_error, like_best_flux_ene, like_best_flux_ene_error, like_best_fluence, like_best_fluence_error, like_best_grbindex, like_best_grbindex_error, like_best_eiso_rf, like_best_eiso_rf_error, like_lat_t0, like_lat_t1, like_lat_ts, like_lat_flux, like_lat_flux_error, like_lat_flux_ene, like_lat_flux_ene_error, like_lat_fluence, like_lat_fluence_error, like_lat_grbindex, like_lat_grbindex_error, like_lat_eiso_rf, like_lat_eiso_rf_error, like_gbm_t0, like_gbm_t1, like_gbm_ts, like_gbm_flux, like_gbm_flux_error, like_gbm_flux_ene, like_gbm_flux_ene_error, like_gbm_fluence, like_gbm_fluence_error, like_gbm_grbindex, like_gbm_grbindex_error, like_gbm_eiso_rf, like_gbm_eiso_rf_error, like_ext_t0, like_ext_t1, like_ext_ts, like_ext_flux, like_ext_flux_error, like_ext_flux_ene, like_ext_flux_ene_error, like_ext_fluence, like_ext_fluence_error, like_ext_grbindex, like_ext_grbindex_error, like_ext_eiso_rf, like_ext_eiso_rf_error, ext_emission_max_ene, ext_emission_max_ene_p, ext_emission_max_ene_t, ext_emission_n, lat_bpl_chi2, lat_bpl_f0, lat_bpl_f0_error, lat_bpl_index1, lat_bpl_index1_error, lat_bpl_index2, lat_bpl_index2_error, lat_bpl_timebreak, lat_bpl_timebreak_error, lat_spl_chi2, lat_spl_index1, lat_spl_index1_error, lat_f0, lat_f0_error, late_index, late_index_error, su_tsinput, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 117 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nm = 'GRB09'\n",
+    "all_candidates.query('\"GRB09\" in gcn_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a08fde4",
    "metadata": {},
    "outputs": [],
    "source": []
