tag the t90 section

--- a/BHRad/Modelling/BHawk_Modelling.ipynb
+++ b/BHRad/Modelling/BHawk_Modelling.ipynb
@@ -272,6 +272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Finding T90s](#T90)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 294,
    "metadata": {},
